fix ci test command, fix make targets, add two dummy tests

--- a/{{cookiecutter.plugin_name}}/.github/workflows/lint-and-test.yml
+++ b/{{cookiecutter.plugin_name}}/.github/workflows/lint-and-test.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           python-version: 3.8
       - uses: actions/checkout@v2
-      - run: pytest
+      - run: make test
