--- a/{{cookiecutter.plugin_name}}/Makefile
+++ b/{{cookiecutter.plugin_name}}/Makefile
@@ -11,12 +11,12 @@ test:
 
 # ---- Installation ---
 
-install: install-deps install-flexmeasures
+install: install-deps install-{cookiecutter.plugin_slug}
 
 install-for-dev:
 	make freeze-deps
 	pip-sync requirements/app.txt requirements/dev.txt requirements/test.txt
-	make install-flexmeasures
+	make install-{cookiecutter.plugin_slug}
 
 install-deps:
 	make install-pip-tools
