install FM test dependencies
Signed-off-by: Nicolas Höning <nicolas@seita.nl>

--- a/{{cookiecutter.plugin_name}}/requirements/test.in
+++ b/{{cookiecutter.plugin_name}}/requirements/test.in
@@ -4,3 +4,7 @@ pytest
 pytest-flask
 pytest-sugar
 pytest-cov
+# lets tests run successfully in containers
+fakeredis
+# required with fakeredis, maybe because we use rq
+lupa
