--- a/{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.plugin_name}}/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.0  # New version tags can be found here: https://gitlab.com/pycqa/flake8/-/tags
+-   repo: https://github.com/pycqa/flake8
+    rev: 3.9.0  # New version tags can be found here: https://github.com/pycqa/flake8/tags
     hooks:
     - id: flake8
       name: flake8 (code linting)
