fix: stop calling setup.py directly for installing the plugin

--- a/{{cookiecutter.plugin_name}}/Makefile
+++ b/{{cookiecutter.plugin_name}}/Makefile
@@ -25,7 +25,7 @@ install-deps:
 	pip-sync requirements/app.txt
 
 install-{{cookiecutter.plugin_slug}}:
-	python setup.py develop
+	pip install -e
 
 install-pip-tools:
 	pip3 install -q "pip-tools>=6.2"
